--- a/styles.css
+++ b/styles.css
@@ -3,85 +3,220 @@
     margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+body {
+    background-color: #0e141b;
+}
+
+.glow-follow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px; 
+    height: 1px; 
+    border-radius: 50%;
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 100%);
+    pointer-events: none; 
+    box-shadow: 0 0 300px 100px rgba(255, 255, 255, 0.2); 
+    transform: translate(-50%, -50%);
+    transition: transform 0.05s ease-out;
+    visibility: hidden; 
+}
+
+.glow-effect {
+    color: white;
+    position: relative;
+    cursor: pointer;
+    transition: color 0.3s ease-in-out;
+}
+
+.glow-effect::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(150, 106, 115);
+    border-radius: 5px;
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    box-shadow: 0 4px 15px rgb(243, 136, 159);
+    transform: scale(0.95);
+}
+
+.glow-effect:hover {
+    color: #ff5277;
+}
+
+.glow-effect:hover::before {
+    opacity: 1;
+    transform: scale(1);
+}
+
 #selfimg {
     border-radius: 100%;
     margin-right:10px;
     width: 60px;
     height: 65px;
 }
+
 #smallResImage, #submenu {
     display: none;
+
 }
-body {
-    background-color: #0e141b;
-}
+
 header {
     display: flex;
-    height: 100px;
+    height: 150px;
     justify-content: space-between;
 }
+
 #myName {
     display: flex;
     width: 160px;
     align-items: center;
     color: white;
     font-weight: bold;
-    margin-left: 10%;
+    margin-left: 15%;
 }
+
 nav {
     display: flex;
     justify-content: right;
     align-items: center;
 }
+
 nav > ul {
     display: flex;
     list-style-type: none;
 }
+
 nav > ul > li {
     color: white;
     margin: 0 15px;
 }
+
 #socialIcons {
     display: flex;
     width: 160px;
-    margin-right: 10%;
+    margin-right: 15%;
     justify-content: right;
     align-items: center;
 }
+
 .social {
     width: 20px;
     height: 20px;
     margin: 0 5px;
     filter: invert(1) brightness(2);
 }
+
 #socialIcons a:last-child img {
     margin-right: 0px;
 }
+
+#firstTitle {
+    display: block;
+    margin: 150px 15%; 
+}
+
+#firstTitle > h1 {
+    color: white;
+    font-size: 75px;
+}
+
+#firstTitle > h2 {
+    color:white; 
+    margin-top: 50px;
+    font-weight: lighter;
+}
+
+#firstTitle > h3 {
+    color:#ff5277
+}
+
+.blinking {
+    animation: blink 2s infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+#conocimientosTitle {
+    font-size: 40px;
+    margin: 0 15%;
+    color: white;
+}
+
 @media (max-width: 1060px) {
     nav, #socialIcons {
       display: none;
     }
+
+    #myName {
+        margin-left: 10%;
+    }
+
     #smallResImage {
         display: flex;
         align-items: center;
         margin-right: 10%;
         filter: invert(1) brightness(2);
     }
+
     #smallResImage > img {
         width: 30px;
         height: 30px;
     }
+
     #submenu > ul {
         color: white;
         text-align: center;
     }
+
     #hiddenSocialIcons {
         display: flex;
         justify-content: center;
     }
+
     .hiddenList, #hiddenSocialIcons{
         padding: 10px;
         background-color: #131c25;
         opacity: 80%;
+    }
+
+    #firstTitle > h1 {
+        font-size: 50px;
+    }
+}
+
+@media (max-width: 760px) {
+    #firstTitle > h1 {
+        color: white;
+        font-size: 35px;
+    }
+
+    #firstTitle > h2 {
+        font-size: 20px;
+    }
+
+    #firstTitle {
+        display: block;
+        text-align: center;
+    }
+
+    .glow-follow {
+        box-shadow: 0 0 150px 50px rgba(255, 255, 255, 0.2); 
     }
 }
